--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,8 @@
 title: "ISSS608-G1-Group10-Project"
 ---
 
+![](images/hand-drawn-weather-effects_23-2149117711.avif)
+
 ### What's This Website For
 
 Using the data collected by Meteorological Service Singapore, the website aims to provide information about the following: 
