--- a/Actualwork/Temperature/Temperature.qmd
+++ b/Actualwork/Temperature/Temperature.qmd
@@ -11,7 +11,7 @@ execute:
 
 ## 1.Introduction
 
-In this section, we will delve into the historical temperature data of Singapore, aiming to gain a thorough insight through the creation of various interactive tools. Additionally, we will employ statistical tests and visualization techniques to substantiate the claim depicted in the charts—that there has been a temperature increase of 0.25 degrees per decade.
+In this section, we will delve into the historical temperature data of Singapore, aiming to gain a thorough insight through the creation of various interactive tools. Additionally, we will employ statistical tests and visualization techniques to substantiate the claim depicted in the charts—that there has been a temperature increase of 0.25 degrees per decade and daily mean temperatures are projected to increase by 1.4 to 4.6 degrees.
 
 ## 2. Install Package
 
@@ -67,20 +67,27 @@ Daily_avg_temp <- weatherdata %>%
 
 ## 4.Exploratory Data Analysis
 
-### 4.1 interactive plot: Annual Average Temperature by Station
+### 4.1 Rain Cloud Plot: Annual Average Temperature by Station
 
 ```{r}
 annual_avg_temp_bystation <- weatherdata %>%
-  group_by(Year,Station) %>%
-  summarise(AnnualAverageMeanTemp = mean(MeanTemp, na.rm = TRUE))
+  group_by(Year,Month,Station) %>%
+  summarise(MonthlyMeanTemp = mean(MeanTemp, na.rm = TRUE))
 
-plot_ly(data = annual_avg_temp_bystation, 
-        x = ~Year, 
-        y = ~AnnualAverageMeanTemp, 
-        color = ~Station)
+
+ggplot(annual_avg_temp_bystation, aes(x = Station, y = MonthlyMeanTemp)) +
+  stat_halfeye(aes(fill=Station),adjust = 0.5, point_colour = NA) +
+  geom_boxplot(width = 0.2, outlier.shape = NA) +
+  stat_dots(side = "left", 
+            justification = 1.2, 
+            binwidth = .05,
+            dotsize = 0.1) +
+  coord_flip() +
+  theme_economist() 
+
 ```
 
-Observation: Over the past decade, Changi Station, situated in the East Region, has recorded higher temperatures compared to other regions.
+Observation: The Rain cloud Plot indicates a marginally elevated mean temperature at the Changi station, which corresponds to the eastern region of Singapore. This suggests that Changi experiences a greater number of warmer days compared to other areas.
 
 ### 4.2 Historical Temperature Comparison By Stations
 
@@ -100,7 +107,7 @@ gg <- ggplot(monthly_avg_temp_bystation ,
            size = AnnualAverageMeanTemp,
            color = as.factor(Station)
            )) +
-  geom_point(aes(size = AnnualAverageMeanTemp,frame=Year),
+  geom_point(aes(size = 0.1 ,frame=Year),
              alpha = 0.7) +
   scale_size(range = c(2, 12)) +
   labs(x = 'Month', 
@@ -114,7 +121,34 @@ ggplotly(gg)
 
 Observation: The same result can be obtained as 4.1, over the past decade, Changi Station has recorded higher temperatures compared to other regions.
 
-### 4.3 Box plot: Annual Temperature Comparison
+### 4.3 Slope Graph: Temperature Changed By Region
+
+```{r}
+weatherdata %>%
+  group_by(Year,Station) %>%
+  summarise(AnnualAverageMeanTemp = mean(MeanTemp, na.rm = TRUE))%>%
+  filter(Year %in% c(2013, 2023)) %>%
+  newggslopegraph(Year, AnnualAverageMeanTemp,Station,
+                Title = "Temerature Changed by Regions",
+                SubTitle = "2013-2023",)
+```
+
+Observation: Examining the data solely from 2013 to 2023, every station exhibits a discernible upward trend, signaling an overall rise in average temperatures over the previous decade. And Changi which represent the East region has higher temperature.
+
+```{r}
+weatherdata %>%
+  group_by(Year) %>%
+  summarise(AnnualAverageMeanTemp = mean(MeanTemp, na.rm = TRUE))%>%
+  filter(Year %in% c(2013, 2023)) %>%
+  mutate(Location = "Singapore") %>%
+  newggslopegraph(Year,AnnualAverageMeanTemp, Location,
+                Title = "Temerature Changed in Singapore",
+                SubTitle = "2013-2023",)
+```
+
+Observation: Comparing the average temperatures across the five stations, we observe a 0.28-degree rise from the last decade, corroborating the assertion that temperatures have been increasing by 0.25 degrees every ten years. Yet, to verify the claim that the daily mean temperature will rise by 1.6 to 4.6 degrees, a more comprehensive analysis of the trend is needed.
+
+### 4.4 Box plot: Annual Temperature Comparison
 
 ::: panel-tabset
 ## Daily Mean Temp
@@ -141,10 +175,10 @@ ggplot(weatherdata, aes(x = Year, y = MinTemp)) + geom_boxplot(fill = "lightblue
 
 Observation: Upon analyzing the maximum, minimum, and average temperatures over the past decade, no definitive trend of increasing temperatures emerges. Further, more detailed examinations will be carried out to substantiate this observation.
 
-### 4.4 HeatMap: Mean Temperature by Year and Month
+### 4.5 HeatMap: Mean Temperature by Year and Month
 
 ```{r}
-ggplot(monthly_avg_temp, 
+gg->ggplot(monthly_avg_temp, 
        aes(Year, 
            Month, 
            fill = AnnualAverageMeanTemp)) + 
@@ -162,11 +196,13 @@ ggplot(monthly_avg_temp,
         plot.title = element_text(hjust = 0.5),
         legend.title = element_text(size = 8),
         legend.text = element_text(size = 6) )
+
+ggplotly(gg)
 ```
 
 Observation: Analyzing the heat map, there's no definitive indication of a rising temperature trend over the past decades. However, it is observable that Singapore experiences its warmest months from April through October.
 
-### 4.5 Monthly Average Temperature Trends by Year
+### 4.6 Monthly Average Temperature Trends by Year
 
 ```{r}
 ggplot(monthly_avg_temp, aes(x = factor(Month), y = AnnualAverageMeanTemp, group = Year, color = factor(Year))) +
@@ -190,19 +226,15 @@ summary(model)
 ```
 
 ```{r}
-
 ggplot(annual_avg_temp, aes(x = as.numeric(factor(Year)), y = AnnualAverageMeanTemp)) +
   geom_point(aes(group = 1)) + 
   geom_smooth(method = "loess", color = "blue", aes(group = 1)) +
   scale_x_continuous(breaks = as.numeric(factor(unique(annual_avg_temp$Year))), labels = unique(annual_avg_temp$Year)) + # Adjust the x-axis labels to show years as characters
   labs(title = "Long-term Temperature Trend", x = "Year", y = "Average Temperature")
-
 ```
 
-Based on this analysis, there doesn't appear to be a significant trend in the annual average mean temperature over the years in your data set. The changes in temperature from year to year are not statistically significant, suggesting that the temperature has remained relatively stable over the period under consideration, at least within the sensitivity of this model.
+![](images/clipboard-889056796.png)
 
-At the same time, the slope of the line is -0.004621, indicating that the temperature decreases by approximately 0.0046 units for each additional year. However, this is a very small change and may not be practically significant.
+From section 4.3 we can conclude that the temperature indeed increase in previous decade
 
-We can infer that relying solely on temperature data from the past decade to predict future temperatures will likely not result in an increase of 1.4 to 4.6 degrees, as previously suggested by the chart.
-
-## 
+Based on this analysis, there doesn't appear to be a significant trend in the annual average mean temperature over the years.We can infer that relying solely on temperature data from the past decade to predict future temperatures will likely not result in an increase of 1.4 to 4.6 degrees, as previously suggested by the chart.
